--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ crewai-tools==0.36.0
 langchain_groq== 0.2.4
 langchain== 0.3.19
 pydantic==2.10.6
-sentence_transformers
+sentence_transformers==3.0.0
 markitdown
 qdrant_client==1.13.2
 chonkie==0.5.0
@@ -12,3 +12,4 @@ chromadb==0.5.23
 pysqlite3-binary
 langchain-text-splitters==0.3.6
 langchain-community==0.3.18
+torch==2.2.0  # Specific compatible version
